# simple_scan_matcher

./: CMakeLists.txt  README.md  package.xml
cfg/: scan_matcher.cfg
include/simple_scan_matcher/: point2d.h  scan_matcher.h  similitude.h
sample/: test_similitude.cpp
script/: gazebo_gt_pose2d.py
src/: scan_matcher.cpp  scan_matcher_node.cpp  similitude.cpp
