<?xml version="1.0"?>
<package>
  <name>simple_scan_matcher</name>
  <version>0.0.0</version>
  <description>A simple scan matcher</description>

  <maintainer email="deray.jeremie@gmail.com">Jeremie Deray</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/simple_scan_matcher</url> -->

  <author email="deray.jeremie@gmail.com">Jeremie Deray</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>message_runtime</run_depend>

  <build_depend>cmake_modules</build_depend>

  <export>

  </export>
</package>
